RESOLVED FIXED12444
Assertion failure in -[WebCoreFrameBridge installInFrame:]
https://bugs.webkit.org/show_bug.cgi?id=12444
Summary Assertion failure in -[WebCoreFrameBridge installInFrame:]
Alexey Proskuryakov
Reported 2007-01-27 10:08:38 PST
Just opening the bug URL results in an assertion failure: ASSERTION FAILED: m_frame == m_frame->page()->mainFrame() || m_frame->ownerElement() (/Users/ap/WebKit/WebCore/page/mac/WebCoreFrameBridge.mm:508 -[WebCoreFrameBridge installInFrame:]) Thread 0 Crashed: 0 com.apple.WebCore 0x0114a35c -[WebCoreFrameBridge installInFrame:] + 192 (WebCoreFrameBridge.mm:508) 1 com.apple.WebKit 0x003c7a20 WebFrameLoaderClient::makeDocumentView() + 420 (WebFrameLoaderClient.mm:166) 2 com.apple.WebCore 0x014eb588 WebCore::FrameLoader::transitionToCommitted(WTF::PassRefPtr<WebCore::PageCache>) + 948 (FrameLoader.cpp:2382) 3 com.apple.WebCore 0x014ebb54 WebCore::FrameLoader::commitProvisionalLoad(WTF::PassRefPtr<WebCore::PageCache>) + 224 (FrameLoader.cpp:2285) 4 com.apple.WebCore 0x014ef624 WebCore::DocumentLoader::commitIfReady() + 108 (DocumentLoader.cpp:287) 5 com.apple.WebCore 0x014ef678 WebCore::DocumentLoader::commitLoad(char const*, int) + 56 (DocumentLoader.cpp:326) 6 com.apple.WebCore 0x014ef730 WebCore::DocumentLoader::receivedData(char const*, int) + 104 (DocumentLoader.cpp:340) 7 com.apple.WebCore 0x014d99f8 WebCore::FrameLoader::receivedData(char const*, int) + 60 (FrameLoader.cpp:1909) 8 com.apple.WebCore 0x014f0dec WebCore::MainResourceLoader::addData(char const*, int, bool) + 92 (MainResourceLoader.cpp:135) 9 com.apple.WebCore 0x014f362c WebCore::ResourceLoader::didReceiveData(char const*, int, long long, bool) + 104 10 com.apple.WebCore 0x014f11a4 WebCore::MainResourceLoader::didReceiveData(char const*, int, long long, bool) + 288 (MainResourceLoader.cpp:304) 11 com.apple.WebCore 0x014f3054 WebCore::ResourceLoader::didReceiveData(WebCore::ResourceHandle*, char const*, int, int) + 108 12 com.apple.WebCore 0x014c8c4c -[WebCoreResourceHandleAsDelegate connection:didReceiveData:lengthReceived:] + 240 (ResourceHandleMac.mm:350) 13 com.apple.Foundation 0x9298f5d4 -[NSURLConnection(NSURLConnectionInternal) _sendDidReceiveDataCallback] + 564 14 com.apple.Foundation 0x9298da74 -[NSURLConnection(NSURLConnectionInternal) _sendCallbacks] + 488 15 com.apple.Foundation 0x9298d810 _sendCallbacks + 156
Attachments
Mark Rowe (bdash)
Comment 1 2007-01-28 15:37:11 PST
Anders Carlsson
Comment 2 2007-01-29 15:02:47 PST
Committed revision 19236.
Note You need to log in before you can comment on or make changes to this bug.