LayoutTests:

Reviewed by Geoff.

        <rdar://problem/4960097>
        http://bugs.webkit.org/show_bug.cgi?id=12444
        Assertion failure in -[WebCoreFrameBridge installInFrame:]

        * fast/parser/xhtml-document-with-html-object-expected.txt: Added.
        * fast/parser/xhtml-document-with-html-object.xhtml: Added.

WebCore:

        Reviewed by Geoff.

        <rdar://problem/4960097>
        http://bugs.webkit.org/show_bug.cgi?id=12444
        Assertion failure in -[WebCoreFrameBridge installInFrame:]

        The problem was that the XML tokenizer didn't create elements with
        createdByParser set to true.

        * dom/Document.cpp:
        (WebCore::Document::createElement):
        New method which takes a QName. This is used by both the XML tokenizer and createElementNS.

        (WebCore::Document::createElementNS):
        Call new createElement method.

        * dom/XMLTokenizer.h:
        * dom/XMLTokenizer.cpp:
        (WebCore::XMLTokenizer::XMLTokenizer):
        (WebCore::XMLTokenizer::~XMLTokenizer):
        Use an OwnPtr for the pending callbacks object. Also, use String instead of StringImpl in the hash map.

        (WebCore::toString):
        (WebCore::XMLTokenizer::startElementNs):
        Call createElement.



Canonical link: https://commits.webkit.org/16185@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19236 268f45cc-cd09-0410-ab3c-d52691b4dbfc